:sparkles: Add digital card management feature with QR code generation and user quota enforcement

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -74,6 +74,7 @@
                 <a href="{{ path('app_home') }}" class="navbar-brand">Hermio</a>
                 <div class="navbar-menu">
                     {% if is_granted('ROLE_USER') %}
+                        <a href="{{ path('app_card_index') }}" class="nav-link">{{ 'card.list.title'|trans }}</a>
                         <a href="{{ path('app_account_index') }}" class="nav-link">{{ 'account.management.title'|trans }}</a>
                         <a href="{{ path('app_account_my_plan') }}" class="nav-link">{{ 'account.my_plan.title'|trans }}</a>
                         <a href="{{ path('app_subscription_manage') }}" class="nav-link">{{ 'subscription.manage.title'|trans }}</a>
