--- a/app/templates/card/create.html.twig
+++ b/app/templates/card/create.html.twig
@@ -10,7 +10,7 @@
         {% if quotaLimit %}
             <div class="alert alert-info">
                 <p>
-                    {{ 'card.quota.info'|trans }}: 
+                    {{ 'card.quota.info'|trans }}:
                     {{ currentUsage }} / {{ quotaLimit }} {{ 'account.quota.cards'|trans }}
                 </p>
             </div>
@@ -24,11 +24,18 @@
             {{ form_row(form.title) }}
             {{ form_row(form.bio) }}
             {{ form_row(form.website) }}
-            
+
             <h3 style="margin-top: 30px;">{{ 'card.social.title'|trans }}</h3>
             {{ form_row(form.linkedin) }}
-            {{ form_row(form.twitter) }}
-            
+            {{ form_row(form.instagram) }}
+            {{ form_row(form.tiktok) }}
+            {{ form_row(form.facebook) }}
+            {{ form_row(form.x) }}
+            {{ form_row(form.bluebirds) }}
+            {{ form_row(form.snapchat) }}
+            {{ form_row(form.planity) }}
+            {{ form_row(form.other) }}
+
             <div style="margin-top: 30px; display: flex; gap: 15px;">
                 <button type="submit" class="btn btn-primary">{{ 'card.save'|trans }}</button>
                 <a href="{{ path('app_card_index') }}" class="btn btn-secondary">{{ 'card.cancel'|trans }}</a>
