--- a/app/templates/profile/index.html.twig
+++ b/app/templates/profile/index.html.twig
@@ -1,8 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_admin.html.twig' %}
 
 {% block title %}Profile - Hermio{% endblock %}
 
-{% block body %}
+{% block page_title %}{{ 'nav.settings'|trans }}{% endblock %}
+
+{% block admin_content %}
 <div class="profile-container">
     <h1>Your Profile</h1>
 
