--- a/app/templates/admin/webhook/index.html.twig
+++ b/app/templates/admin/webhook/index.html.twig
@@ -1,8 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_admin.html.twig' %}
 
 {% block title %}{{ 'admin.webhook.title'|trans }} - Hermio{% endblock %}
 
-{% block body %}
+{% block page_title %}{{ 'admin.webhook.title'|trans }}{% endblock %}
+
+{% block admin_content %}
 <div class="profile-container">
     <div class="profile-card">
         <h1>{{ 'admin.webhook.title'|trans }}</h1>
