--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -10,7 +10,8 @@
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
     </head>
-    <body class="bg-light">
+    <body {% block body_attr %}class="bg-light"{% endblock %}>
+        {% block navbar %}
         <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
             <div class="container">
                 <a href="{{ path('app_home') }}" class="navbar-brand">Hermio</a>
@@ -84,6 +85,7 @@
                 </div>
             </div>
         </nav>
+        {% endblock %}
 
         {% block body_wrapper %}
         <main class="container my-4">
